[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/minijuego_tomates.gd" type="Script" id=1]
[ext_resource path="res://objects/games/tomates/tomato.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sprites.png" type="Texture" id=4]
[ext_resource path="res://assets/stolen_hills.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=11]
radius = 23.0
height = 0.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16, 129 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 2.25, 17.5 )

[node name="minijuego_tomates" type="Node2D"]
script = ExtResource( 1 )

[node name="score" type="Label" parent="."]
margin_left = 200.0
margin_top = 1.0
margin_right = 321.0
margin_bottom = 43.0
align = 1
valign = 1

[node name="tomate" parent="." groups=["tomato"] instance=ExtResource( 3 )]
position = Vector2( 259, 77 )
contacts_reported = 5

[node name="player" type="KinematicBody2D" parent="." groups=["player"]]
position = Vector2( 262, 222 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( -3, 2 )
shape = SubResource( 11 )

[node name="olla" type="Sprite" parent="player"]
position = Vector2( -25, 34 )
z_index = 1
texture = ExtResource( 4 )
offset = Vector2( 24, -21 )
region_enabled = true
region_rect = Rect2( 862, 370, 69, 66 )

[node name="minijuego_tomates" type="Node2D" parent="."]

[node name="background" type="Sprite" parent="minijuego_tomates"]
self_modulate = Color( 0.960784, 1, 0.776471, 1 )
position = Vector2( 258.376, 128.812 )
scale = Vector2( 1.00928, 1.00928 )
z_index = -1
texture = ExtResource( 5 )

[node name="tomatoes" type="Sprite" parent="minijuego_tomates"]
position = Vector2( 42, 125 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 108, 277, 40, 212 )

[node name="tomatoes2" type="Sprite" parent="minijuego_tomates"]
position = Vector2( 460, 155 )
scale = Vector2( 1.225, 1.225 )
texture = ExtResource( 4 )
offset = Vector2( 24, -21 )
region_enabled = true
region_rect = Rect2( 108, 277, 40, 212 )

[node name="wall" type="StaticBody2D" parent="."]
position = Vector2( 507, 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall"]
position = Vector2( -4, 118 )
shape = SubResource( 12 )

[node name="wall2" type="StaticBody2D" parent="."]
position = Vector2( 12, 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="wall2"]
position = Vector2( 6, 119 )
shape = SubResource( 12 )

[node name="spawn_min" type="Position2D" parent="."]
position = Vector2( 66, 11 )

[node name="spawn_max" type="Position2D" parent="."]
position = Vector2( 461, 10 )

[node name="timer" type="Timer" parent="."]
autostart = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 472, 312 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 5.25, 5 )
shape = SubResource( 13 )

[node name="w" type="StaticBody2D" parent="."]
position = Vector2( 525, 312 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="w"]
position = Vector2( 5.25, 5 )
shape = SubResource( 13 )

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
